Version 1.1-7:
  - Fix a NOTE on registering native routines by 
  registering C functions as POT_do_<func>
Version 1.1-6:
  - Fix wrong usage of return in the following R files:
./POT/R/bvpot-fitBvGPD.R : 254         return
./POT/R/mcpot-fitMcGPD.R : 220         return
./POT/R/util-GPD-mle.R : 117           return
./POT/R/util-GPD-mle.R : 126             return
./POT/R/util-GPD-mle.R : 134               return
./POT/R/util-GPD-mple.R : 120           return
./POT/R/util-GPD-mple.R : 130             return
./POT/R/uvpot-fitPP.R : 107           return
./POT/R/uvpot-fitPP.R : 117             return
(thanks to Duncan Murdoch)
  - Update/simplify man pages.
  - Add a coef function for "pot" objects.
 
Version 1.1-5:
  - Rename files in R/ directory.
  - Add a GPL banner on R/C files.

Version 1.1-4:
  - Update for future CRAN release by Christophe Dutang.
  - Fix issues with S3 class and add defensive programming.

Version 1.1-3:
  - Fix a problem detected by AddressSanitizer (thanks to Brian Ripley): 
see https://r-forge.r-project.org/scm/viewvc.php/pkg/src/ts2tsd.c?root=pot&r1=354&r2=493

Version 1.0-7:
  - Update my address e.g. move to EPFL.
  - Add the point process fitting procedure.

Version 1.0-6:
  - Improve the package homepage.
  - Fix a bug in the pickdep function.

Version 1.0-5:
  - Add a ``convassess'' function to assess for convergence of the
    fitted uvpot and bvpot objects.
  - Some minor changes for uvpot fitting process to increase
    robustness.
  - Density plot can return histogram in addition.
  - Add a confint function to provide a generic access for (profile)
    confidence interval computing.

Version 1.0-4:
  - Fix encodings with newer R version.
  - Link to the url at R-Forge in the Description file.
  - Add lots of new estimators for the univariate GPD.
  - Fix typo and update R vignette.
  - Convert R object to double before calling C code as it may fail.

Version 1.0-3:
  - Fix a huge gap within the diplot function. Thanks to Kallen,